# diffraction-structure-classifier

./: .gitignore  README.md  RESULTS.md  pyproject.toml
.github/workflows/: ci.yml
configs/: ablation.yaml  compare.yaml  dose_sweep.yaml  leakage.yaml  orientation_sweep.yaml  reflection_sweep.yaml  scale_cue.yaml
data/: README.md
data/sample/: bcc_fe.npz  diamond_si.npz  fcc_cu.npz  hcp_ti.npz  rocksalt_nacl.npz  sc_po.npz
docs/: api.md
models/: MODEL_CARD.md  pattern_cnn.pt  radial_cnn.pt
notebooks/: tutorial.ipynb
results/: ablation.json  compare.json  dose_sweep.json  leakage.json  metrics.json  orientation_sweep.json  reflection_sweep.json  scale_cue.json
scripts/: build_notebook.py  make_figures.py  run_all.py
src/crystalclass/: __init__.py  benchmark.py  classical.py  cli.py  datasets.py  features.py  io.py  metrics.py  net.py  plots.py  real.py  sim.py  structures.py  train.py
tests/: test_features_net_metrics.py  test_physics_claims.py  test_pipeline.py  test_sim.py  test_stats_and_controls.py  test_structures.py
