[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "crystalclass"
version = "0.1.0"
description = "Classify crystal structure type from simulated electron diffraction patterns: a kinematical simulator, a fair-tuned classical baseline, 1D and 2D CNNs, and a config-driven benchmark"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Aamir Malik" }]
dependencies = [
    "numpy>=1.24",
    "scipy>=1.10",
    "matplotlib>=3.7",
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "torch>=2.0",
    "pyyaml>=6.0",
    "pillow>=10.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff==0.15.22",
    "black==26.5.1",
    "nbclient>=0.9",
    "nbformat>=5.9",
    "ipykernel>=6.25",
]

[project.scripts]
crystalclass = "crystalclass.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 110
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP"]

[tool.ruff.lint.per-file-ignores]
# The notebook builder embeds cell source as string literals; some lines exceed
# the limit and wrapping them would corrupt the generated cells.
"scripts/build_notebook.py" = ["E501"]

[tool.black]
line-length = 110
target-version = ["py311"]

[tool.pytest.ini_options]
testpaths = ["tests"]
